test/recursiveFunctionReturn1.slq
def foo():invalid{ foo(); } /// error
